fix: add align--right option to MainMenu

--- a/src/scss/MainMenu.scss
+++ b/src/scss/MainMenu.scss
@@ -72,6 +72,9 @@
 		display: flex;
 		align-items: center;
 	}
+	.MainMenu--align--right .MainMenu__items {
+		justify-content: flex-end;
+	}
 
 	.MainMenu__item--home {
 		@include sr-only-content-focusable();
